# IV_PSNR_OpticalFlow

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  configure_and_build.bat  configure_and_build.sh
src/IVPSNR/: main.cpp  xCommonDefIVPSNR.h  xIVPSNR.cpp  xIVPSNR.h  xIVPSNRM.cpp  xPSNR.cpp  xPSNR.h  xPicCommon.cpp  xPicCommon.h  xPlane.cpp  xPlane.h  xWSPSNR.cpp  xWSPSNR.h
src/lib_pmbb/: xCfgINI.cpp  xCfgINI.h  xCommonDefPMBB.h  xDistortion.h  xDistortionAVX.cpp  xDistortionAVX.h  xDistortionSSE.cpp  xDistortionSSE.h  xDistortionSTD.cpp  xDistortionSTD.h  xEvent.h  xFile.h  xMathUtils.cpp  xMathUtils.h  xPic.cpp  xPic.h  xPixelOps.h  xPixelOpsAVX.cpp  xPixelOpsAVX.h  xPixelOpsSSE.cpp  xPixelOpsSSE.h  xPixelOpsSTD.cpp  xPixelOpsSTD.h  xPlane.cpp  xPlane.h  xQueue.h  xSeq.cpp  xSeq.h  xString.cpp  xString.h  xThreadPool.cpp  xThreadPool.h  xUtilsOCV.cpp  xUtilsOCV.h  xVec.h
